--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -67,10 +67,7 @@
 			<div id="WatchQuestions" data-url="@Url.Action("GetAllQuestions", new { courseName = @Model.Slide.Info.UnitName})">
 				<button onclick="printAllQuestions()">Посмотреть все заданные вопросы по теме</button>
 			</div>
-
-			<div class="questions-log">
-
-			</div>
+			<div class="questions-log"></div>
 		</div>
 	</div>
 
