--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -185,8 +185,9 @@ a.nav-arrow:hover {
 }
 
 .ask-bar {
-    max-width: 500px;
-    width: 500px;
+    max-width: none;
+    width: 100%;
+    margin-bottom: 15px;
     resize: none;
 }
 
