--- a/src/uLearn.Web/Views/Course/_AskBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_AskBar.cshtml
@@ -1,12 +1,18 @@
 ﻿@model uLearn.CoursePageModel
-<div class="ask-button">
-	<a data-toggle="collapse" href=@("#Ask")>
-		Задать вопрос по материалу
-	</a>
-	<div id="Ask" class="collapse ask-bar" data-url="@Url.Action("AddQuestion", new { Model.Slide.Title, Model.Slide.Info.UnitName })">
-		<textarea id="questField" class="ask-bar"></textarea>
-	    <button id="sendButton" type="button" class="btn btn-primary btn-lg no-rounds ask-button" onclick="sendQuestion()">
-			Отправить
-		</button>
+<a data-toggle="modal" data-target="#myModal" href="#myModal">
+	Задать вопрос по материалу
+</a>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div id="Ask"class="modal-dialog" data-url="@Url.Action("AddQuestion", new { Model.Slide.Title, Model.Slide.Info.UnitName })">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+				<h4 class="modal-title" id="myModalLabel">Задать вопрос преподавателю</h4>
+			</div>
+			<div class="modal-body">
+				<textarea id="questField" class="ask-bar"> </textarea>
+				<button class="btn btn-primary" id="sendButton" type="button" data-dismiss="modal" onclick="sendQuestion()">Отправить</button>
+			</div>
+		</div>
 	</div>
 </div>
