EZ feedback added

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -52,6 +52,7 @@
 					*@
 					@Html.Partial("_ExerciseHints", slide.HintsHtml)
 					@Html.Partial("_AskBar")
+					@Html.Partial("_MarksBar");
 					<button type="button" class="run-solution-button btn btn-primary btn-lg no-rounds"
 							data-url="@Url.Action("RunSolution", new {courseId = Model.Course.Id, slideIndex = Model.SlideIndex})">
 						RUN
