Analytics table added

--- a/src/uLearn.Web/Views/Analytics/TableAnalytics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/TableAnalytics.cshtml
@@ -1,7 +1,57 @@
-﻿
+﻿@using Microsoft.Ajax.Utilities
+@using uLearn
+@model AnalyticsTablePageModel
 @{
-    ViewBag.Title = "TableAnalytics";
+	ViewBag.Title = "TableAnalytics";
 }
+@Html.Partial("../Course/_Sidebar", Model.CoursePageModel)
+<div class="slide-container">
+	<div class="container body-content">
+		<div class="row">
+		    <div class='slide'>
+				<table id="myTable" class="tablesorter">
+					<thead>
+						<tr>
+							<th>Last Name</th>
+							<th>First Name</th>
+							<th>Email</th>
+							<th>Due</th>
+							<th>Web Site</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Smith</td>
+							<td>John</td>
+							<td>jsmith@gmail.com</td>
+							<td>$50.00</td>
+							<td>http://www.jsmith.com</td>
+						</tr>
+						<tr>
+							<td>Bach</td>
+							<td>Frank</td>
+							<td>fbach@yahoo.com</td>
+							<td>$50.00</td>
+							<td>http://www.frank.com</td>
+						</tr>
+						<tr>
+							<td>Doe</td>
+							<td>Jason</td>
+							<td>jdoe@hotmail.com</td>
+							<td>$100.00</td>
+							<td>http://www.jdoe.com</td>
+						</tr>
+						<tr>
+							<td>Conway</td>
+							<td>Tim</td>
+							<td>tconway@earthlink.net</td>
+							<td>$50.00</td>
+							<td>http://www.timconway.com</td>
+						</tr>
+					</tbody>
+				</table>
 
-<h2>TableAnalytics</h2>
-
+		    </div>
+		</div>
+	</div>
+</div>
