--- a/src/uLearn.Web/Views/Course/_Sidebar.cshtml
+++ b/src/uLearn.Web/Views/Course/_Sidebar.cshtml
@@ -31,6 +31,7 @@
 				</ul>
 			</li>
 		}
+		<li class="slide-list-item">@Html.ActionLink("Progress", "TableAnalytics", "Analytics", new { courseId = Model.Course.Id, slideIndex = "0" }, null)</li>
 	}
 </ul>
 
