--- a/src/uLearn.Web/Views/Course/_Sidebar.cshtml
+++ b/src/uLearn.Web/Views/Course/_Sidebar.cshtml
@@ -31,7 +31,9 @@
 				</ul>
 			</li>
 		}
-		<li class="slide-list-item">@Html.ActionLink("Progress", "TableAnalytics", "Analytics", new { courseId = Model.Course.Id, slideIndex = "0" }, null)</li>
+		<ul>
+			<li class="units-list-item units-list-item-text">@Html.ActionLink("Progress", "TableAnalytics", "Analytics", new { courseId = Model.Course.Id, slideIndex = "0" }, null)</li>
+		</ul>
 	}
 </ul>
 
