--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -50,7 +50,7 @@
 						<a href="#" onclick="updateVerdict(false, 'Compilation error', 'details', true)">CompilationError</a>
 						<a href="#" onclick="updateVerdict(false, 'Неверный ответ', 'Bullshit', false)">WrongAnswer</a>
 					*@
-					@Html.Partial("_ExerciseHints", slide.HintsHtml)
+					@Html.Partial("_ExerciseHints", Model)
 					@Html.Partial("_AskBar")
 					@Html.Partial("_MarksBar");
 					<button type="button" class="run-solution-button btn btn-primary btn-lg no-rounds"
