nice and pretty tablesorter

--- a/src/uLearn.Web/Views/Analytics/TableAnalytics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/TableAnalytics.cshtml
@@ -9,6 +9,8 @@
 @Html.Partial("../Course/_Sidebar", Model.CoursePageModel)
 
 <body>
+	<script language="JavaScript" type="text/javascript" src="~/Scripts/jquery-2.1.1.min.js"></script>
+	<script language="JavaScript" type="text/javascript" src="~/tablesorter-master/jquery.tablesorter.js"></script>
 	<div class="slide-container">
 		<div class="container body-content">
 			<div class="row">
@@ -45,4 +47,8 @@
 			</div>
 		</div>
 	</div>
+	<script src="~/Scripts/table-configurator.js"> </script>
 </body>
+
+
+
