--- a/src/uLearn.Web/Views/Course/_Sidebar.cshtml
+++ b/src/uLearn.Web/Views/Course/_Sidebar.cshtml
@@ -32,7 +32,7 @@
 			</li>
 		}
 		<li class="units-list-item units-list-item-text">@Html.ActionLink("Total progress", "TableAnalytics", "Analytics", new { courseId = Model.Course.Id, slideIndex = "0" }, null)</li>
-		<li class="units-list-item units-list-item-text">@Html.ActionLink("Users progress", "UserStats", "Analytics", new { courseId = Model.Course.Id, slideIndex = "0" }, null)</li>
+		@*<li class="units-list-item units-list-item-text">@Html.ActionLink("Users progress", "UsersStatistics", "Analytics", new { courseId = Model.Course.Id, slideIndex = "0" }, null)</li>*@
 		<li class="units-list-item units-list-item-text">@Html.ActionLink("Personal progress", "PersonalStatistics", "Analytics", new { courseId = Model.Course.Id, slideIndex = "0" }, null)</li>
 
 	}
