Slide id, changes in DB

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -105,4 +105,4 @@
 
 <script language="JavaScript" type="text/javascript" src="~/Scripts/jquery-2.1.1.min.js"></script>
 <script language="JavaScript" type="text/javascript" src="~/Scripts/slide-onload-visit.js"></script>
-<script id="VisitSlideUrl" data-url='@Url.Action("VisitSlide", new { courseId = Model.Course.Id, slideIndex = Model.SlideIndex })'>smbVisit()</script>
+<script id="VisitSlideUrl" data-url='@Url.Action("VisitSlide", new { courseId = Model.Course.Id, slideId = Model.Slide.Id })'>smbVisit()</script>
