--- a/src/uLearn.Web/Views/Course/_RatesBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_RatesBar.cshtml
@@ -3,7 +3,7 @@
     @{
         var courseId = Model.Course.Id;
         //var unitName = Model.Course.Slides[Model.SlideIndex].Info.UnitName;
-        var slideId = Model.SlideIndex;
+        var slideId = Model.Slide.Id;
         const string good = "Good";
         const string notUnderstand = "NotUnderstand";
         const string trivial = "Trivial";
