--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -108,17 +108,17 @@ a.nav-arrow:hover {
 }
 
 .send-question {
-    
 }
 
 .questions-log {
-    
 }
+
 .diff-table {
     width: 100%;
     margin-top: 25px;
     word-wrap: break-word;
 }
+
 .run-verdict {
     height: 46px;
     line-height: 46px;
@@ -138,9 +138,9 @@ a.nav-arrow:hover {
 }
 
 .no-rounds {
-  border-radius:                    0px;
-  -webkit-border-radius:            0px;
-  -moz-border-radius:               0px;
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
 }
 
 .units-list {
@@ -158,7 +158,7 @@ a.nav-arrow:hover {
 .slides-list {
     font-weight: normal;
     padding-left: 0;
-    margin-top:0.5em;
+    margin-top: 0.5em;
 }
 
 .slide-list-item {
@@ -168,7 +168,7 @@ a.nav-arrow:hover {
 }
 
     .slide-list-item.selected {
-        background-color:#f5f5f5;
+        background-color: #f5f5f5;
         font-weight: bolder;
         list-style-type: none;
     }
@@ -216,13 +216,24 @@ a.nav-arrow:hover {
 }
 
 .visited-hint {
-  background-color: lightgreen;
-  padding: 10px 15px;
-  border-bottom: 1px solid transparent;
-  border-top-right-radius: 3px;
-  border-top-left-radius: 3px;
+    background-color: lightgreen;
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
 }
 
 .green-cell {
     background-color: lightgreen;
+}
+
+.clear-code {
+    text-decoration: none;
+}
+
+.clear-code:hover {
+        text-decoration: none;
+        color: white;
+        cursor: pointer;
+        background-color: #838383;
 }
