--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -38,7 +38,7 @@
 					}
 					else
 					{
-						<button class="label label-default" onclick="cleanUserCode()">ClearCode</button>
+						<a class="label label-default clear-code" onclick="cleanUserCode()">ClearCode</a>
 						<textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
 					}
 					<div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine ™</a></div>
