--- a/src/uLearn.Web/Views/Analytics/TableAnalytics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/TableAnalytics.cshtml
@@ -1,56 +1,55 @@
 ﻿@using System.Globalization
-@using Microsoft.Ajax.Utilities
 @using uLearn
 @model AnalyticsTablePageModel
 @{
-	ViewBag.Title = "TableAnalytics";
+	ViewBag.Title = "Total progress";
 }
 
-@Html.Partial("../Course/_Sidebar", Model.CoursePageModel)
+@Html.Partial("_Sidebar", Model.CoursePageModel)
 
 <body>
-	<script language="JavaScript" type="text/javascript" src="~/Scripts/jquery-2.1.1.min.js"></script>
-	<script language="JavaScript" type="text/javascript" src="~/tablesorter-master/jquery.tablesorter.js"></script>
 	<div class="slide-container">
 		<div class="container body-content">
 			<div class="row">
-				<div class='slide'>
-					<table id="myTable" class="tablesorter">
-						<thead>
+				<table id="myTable" class="tablesorter">
+					<thead>
+						<tr>
+							<th>Название</th>
+							<th>Количество просмотревших</th>
+							<th>Успешные решения</th>
+							<th>Количество оценок</th>
+							<th>оценок "хорошо"</th>
+							<th>оценок "не понятно"</th>
+							<th>оценок "тривиально"</th>
+						</tr>
+					</thead>
+					<tbody>
+						@{ var counter = -1;}
+						@foreach (var info in Model.TableInfo)
+						{
+							counter++;
 							<tr>
-								<th>Название</th>
-								<th>Количество просмотревших</th>
-								<th>Успешные решения</th>
-								<th>Количество оценок</th>
-								<th>оценок "хорошо"</th>
-								<th>оценок "не понятно"</th>
-								<th>оценок "тривиально"</th>
+								<td data-sort-value=@(counter + 1000)>@Html.ActionLink(info.Key, "Slide", "Course", new { courseId = Model.CoursePageModel.Course.Id, slideIndex = counter }, null)</td>
+								<td>@info.Value.VisitersCount</td>
+								<td>@(info.Value.IsExercise ? info.Value.SolversCount.ToString(CultureInfo.InvariantCulture) : "")</td>
+								<td>@info.Value.Marks.Count</td>
+								<td>@(info.Value.Marks.Count == 0 ? 0 : (int)(100 * (double)info.Value.Marks.Good / info.Value.Marks.Count))%</td>
+								<td>@(info.Value.Marks.Count == 0 ? 0 : (int)(100 * (double)info.Value.Marks.NotUnderstand / info.Value.Marks.Count))%</td>
+								<td>@(info.Value.Marks.Count == 0 ? 0 : (int)(100 * (double)info.Value.Marks.Trivial / info.Value.Marks.Count))%</td>
 							</tr>
-						</thead>
-						<tbody>
-							@{ var counter = -1;}
-							@foreach (var info in Model.TableInfo)
-							{
-								counter++;
-								<tr>
-									<td data-sort-value=@(counter + 1000)>@Html.ActionLink(info.Key, "Slide", "Course", new { courseId = Model.CoursePageModel.Course.Id, slideIndex = counter }, null)</td>
-									<td>@info.Value.VisitersCount</td>
-									<td>@(info.Value.IsExercise ? info.Value.SolversCount.ToString(CultureInfo.InvariantCulture) : "")</td>
-									<td>@info.Value.Marks.Count</td>
-									<td>@(info.Value.Marks.Count == 0 ? 0 : (int)(100 * (double)info.Value.Marks.Good / info.Value.Marks.Count))%</td>
-									<td>@(info.Value.Marks.Count == 0 ? 0 : (int)(100 * (double)info.Value.Marks.NotUnderstand / info.Value.Marks.Count))%</td>
-									<td>@(info.Value.Marks.Count == 0 ? 0 : (int)(100 * (double)info.Value.Marks.Trivial / info.Value.Marks.Count))%</td>
-								</tr>
-							}
-						</tbody>
-					</table>
+						}
+					</tbody>
+				</table>
 
-				</div>
 			</div>
 		</div>
 	</div>
-	<script src="~/Scripts/table-configurator.js"> </script>
 </body>
+
+@section scripts{
+	<script src="~/tablesorter-master/jquery.tablesorter.js"></script>
+	<script src="~/Scripts/table-configurator.js"> </script>
+}
 
 
 
