--- a/src/uLearn.Web/Views/Analytics/UsersStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UsersStatistics.cshtml
@@ -1,51 +1,49 @@
-﻿@using System.Globalization
-@using Microsoft.Ajax.Utilities
-@using uLearn
+﻿@using uLearn
 @model UsersStatsPageModel
 @{
 	ViewBag.Title = "TableAnalytics";
 }
 
-@Html.Partial("../Course/_Sidebar", Model.CoursePageModel)
+@Html.Partial("_Sidebar", Model.CoursePageModel)
 
 <body>
-	<script language="JavaScript" type="text/javascript" src="~/Scripts/jquery-2.1.1.min.js"></script>
-	<script language="JavaScript" type="text/javascript" src="~/tablesorter-master/jquery.tablesorter.js"></script>
 	<div class="slide-container">
 		<div class="container body-content">
 			<div class="row">
-				<div class='slide'>
-					<table id="myTable" class="tablesorter">
-						<thead>
-							<tr>
-							    <th>user name</th>
-								@foreach (var unitName in Model.UserStats.FirstOrDefault().Value.PercentAcceptedSolutionsPerUnit.Keys)
-								{
-								    <th>@unitName</th>
-								}
-								<th>total</th>
-							</tr>
-						</thead>
-						<tbody>
-							@foreach (var name in Model.UserStats)
+				<table id="myTable" class="tablesorter">
+					<thead>
+						<tr>
+							<th>user name</th>
+							@foreach (var unitName in Model.UserStats.FirstOrDefault().Value.PercentAcceptedSolutionsPerUnit.Keys)
 							{
-								<tr>
-								    <td>@name.Key</td>
-									@foreach (var unit in name.Value.PercentAcceptedSolutionsPerUnit.Values)
-									{
-									    <td>@unit.Count</td>
-									}
-								    <td>
-										@name.Value.PercentAcceptedSolutionsPerUnit.Values.Select(x => x.Count).Aggregate(0, (x, y) => x + y)
-								    </td>
-								</tr>
+								<th>@unitName</th>
 							}
-						</tbody>
-					</table>
-
-				</div>
+							<th>total</th>
+						</tr>
+					</thead>
+					<tbody>
+						@foreach (var name in Model.UserStats)
+						{
+							<tr>
+								<td>@name.Key</td>
+								@foreach (var unit in name.Value.PercentAcceptedSolutionsPerUnit.Values)
+								{
+									<td>@unit.Count</td>
+								}
+								<td>
+									@name.Value.PercentAcceptedSolutionsPerUnit.Values.Select(x => x.Count).Aggregate(0, (x, y) => x + y)
+								</td>
+							</tr>
+						}
+					</tbody>
+				</table>
 			</div>
 		</div>
 	</div>
 	<script src="~/Scripts/table-configurator.js"> </script>
 </body>
+
+@section scripts{
+	<script src="~/tablesorter-master/jquery.tablesorter.js"></script>
+	<script src="~/Scripts/table-configurator.js"> </script>
+}
